2004-05-07  John Finlay  <finlay@moeraki.com>

	* pygtk-gtktreestore.xml (remove) Fix return value explanation.

	* pygtk-gtkliststore.xml (iter_is_valid) (reorder)
	(move_before) (move_after) Change first release designation
	to PyGTK 2.2.

	* pygtk-gtktreemodel.xml (get) Add description of this PyGTK 2.4
	method.
	(get) Add column param to description.

2004-05-06  John Finlay  <finlay@moeraki.com>

	* pygtk-gtktreestore (insert) (insert_after) (insert_before)
	(append) (prepend) Add initializers to the Synopsis.

2004-05-05  John Finlay  <finlay@moeraki.com>

	* pygtk-gobject-constants (gobject-type-constants) Fix link.

	* pygtk2-ref.xml Bump release number to 2.4.5

	============= 2.4.4 =============
2004-05-05  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkmenuitem.xml (activate) Accidentally commented out
	description.

	* pygtk-introduction.xml Unscramble programlisting.

	* pygtk-gobject.xml Fix Attribute formatting.

	* pygtk-gtkaction.xml (get_visible) Fix link.

	* pygtk-gtkbox.xml (pack_start_defaults)
	(pack_end_defaults) Add deprecation warnings. Remove references in
	Description.

	* pygtk-gtkcombo.xml Fix Properties formatting.

	* pygtk-gtkcontainer.xml Fix Attribute formatting.

	* pygtk-gtkdialog.xml Fix Attribute formatting.

	* pygtk-gtkfileselection.xml Fix Attribute formatting.

	* pygtk-gtkfontselectiondialog.xml Fix Attribute formatting.

	* pygtk-gtkmessagedialog.xml Fix Attribute formatting.

	* pygtk-gtknotebook.xml Fix Attribute formatting.

	* pygtk-gtkrequisition.xml Fix Attribute formatting.

	* pygtk-gtkselectiondata.xml Fix Attribute formatting.

	* pygtk-gtkstyle.xml Fix Attribute formatting.

	* pygtk-gtktextattributes.xml Fix Attribute formatting.

	* pygtk-gtktextbuffer.xml Fix Attribute formatting.

	* pygtk-gtktogglebutton.xml Fix Attribute formatting.

	* pygtk-gtktooltips.xml Fix Attribute formatting.

	* pygtk-gtkwidget.xml Fix Attribute formatting.

	* pygtk-gtkwindow.xml Fix Attribute formatting.
