@@ -640,6 +640,12 @@ role="keyword">tab_label</parameter>&nbsp;:</term>
 linkend="class-gtkwidget"><classname>gtk.Widget</classname></link> to be
 used as the label for the page,</simpara></listitem>
 	</varlistentry>
+	<varlistentry>
+	  <term><emphasis>Returns</emphasis>&nbsp;:</term>
+	  <listitem><simpara>in PyGTK 2.0 and 2.2 returns
+	  <literal>None</literal>. In PyGTK 2.4 and above returns the index
+	  number of the page in the notebook</simpara></listitem>
+	</varlistentry>
       </variablelist>
 
       <para>The <methodname>append_page</methodname>() method appends a page
@@ -681,6 +687,12 @@ role="keyword">menu_label</parameter>&nbsp;:</term>
 	  <listitem><simpara>the widget to use as a label for the
 page-switch menu, if that is enabled.</simpara></listitem>
 	</varlistentry>
+	<varlistentry>
+	  <term><emphasis>Returns</emphasis>&nbsp;:</term>
+	  <listitem><simpara>in PyGTK 2.0 and 2.2 returns
+	  <literal>None</literal>. In PyGTK 2.4 and above returns the index
+	  number of the page in the notebook</simpara></listitem>
+	</varlistentry>
       </variablelist>
 
       <para>The <methodname>append_page_menu</methodname>() method appends a
@@ -715,6 +727,12 @@ role="keyword">tab_label</parameter>&nbsp;:</term>
 	  <listitem><simpara>the <link
 linkend="class-gtkwidget"><classname>gtk.Widget</classname></link> to be
 used as the label for the page.</simpara></listitem>
+	</varlistentry>
+	<varlistentry>
+	  <term><emphasis>Returns</emphasis>&nbsp;:</term>
+	  <listitem><simpara>in PyGTK 2.0 and 2.2 returns
+	  <literal>None</literal>. In PyGTK 2.4 and above returns the index
+	  number of the page in the notebook</simpara></listitem>
 	</varlistentry>
       </variablelist>
 
@@ -756,6 +774,12 @@ used as the label for the page.</simpara></listitem>
 role="keyword">menu_label</parameter>&nbsp;:</term>
 	  <listitem><simpara>the widget to use as a label for the
 page-switch menu, if that is enabled.</simpara></listitem>
+	</varlistentry>
+	<varlistentry>
+	  <term><emphasis>Returns</emphasis>&nbsp;:</term>
+	  <listitem><simpara>in PyGTK 2.0 and 2.2 returns
+	  <literal>None</literal>. In PyGTK 2.4 and above returns the index
+	  number of the page in the notebook</simpara></listitem>
 	</varlistentry>
       </variablelist>
 
@@ -799,6 +823,12 @@ used as the label for the page.</simpara></listitem>
 	  <listitem><simpara>the index (starting at 0) at which to insert
 the page, or -1 to append the page after all other
 pages.</simpara></listitem>
+	</varlistentry>
+	<varlistentry>
+	  <term><emphasis>Returns</emphasis>&nbsp;:</term>
+	  <listitem><simpara>in PyGTK 2.0 and 2.2 returns
+	  <literal>None</literal>. In PyGTK 2.4 and above returns the index
+	  number of the page in the notebook</simpara></listitem>
 	</varlistentry>
       </variablelist>
 
@@ -851,6 +881,12 @@ page-switch menu, if that is enabled.</simpara></listitem>
 	  <listitem><simpara>the index (starting at 0) at which to insert
 the page, or -1 to append the page after all other
 pages.</simpara></listitem>
+	</varlistentry>
+	<varlistentry>
+	  <term><emphasis>Returns</emphasis>&nbsp;:</term>
+	  <listitem><simpara>in PyGTK 2.0 and 2.2 returns
+	  <literal>None</literal>. In PyGTK 2.4 and above returns the index
+	  number of the page in the notebook</simpara></listitem>
 	</varlistentry>
       </variablelist>
 
