@@ -1,3 +1,10 @@
+2004-05-10  John Finlay  <finlay@moeraki.com>
+
+	* pygtk-gtknotebook.xml (append_page) (append_page_menu)
+	(prepend_page) (prepend_page_menu) (insert_page)
+	(insert_page_menu) Add description of return value for PyGTK 2.4
+	and above - these return a page index.
+
 2004-05-07  John Finlay  <finlay@moeraki.com>
 
 	* pygtk-gtktreestore.xml (remove) Fix return value explanation.
